--- a/style/main.css
+++ b/style/main.css
@@ -391,7 +391,7 @@ hr {
       .tile.tile-1024 .tile-inner {
         font-size: 15px; } }
   .tile.tile-2048 .tile-inner {
-    cbackground: url('../love/2048.jpg');
+    background: url('../love/2048.jpg');
     background-size: cover;
     color: transparent;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
